--- a/public/angular_views/admin/index.html
+++ b/public/angular_views/admin/index.html
@@ -1,6 +1,3 @@
-<script src="/bower_components/ng-table/ng-table.js"></script>
-<div data-ng-init="getCurrentUser();">
-
 <div ng-if="user.admin">
 	<h2>Product Management<h2>
 
@@ -19,18 +16,9 @@
           <td>{{product.cost | currency:"&#8377;"}}</td>
           <td>{{product.discount | currency:"&#8377;"}}</td>
           <td> 
-            <!-- <button ng-click="deleteCustomer(customer.id, $index)" class="btn btn-danger">Delete</button> -->
-            <a href="#edit/{{product.id}}" class= "btn btn-primary">Edit Product</a>&nbsp;&nbsp;
-            <!-- <a href="#detail/{{customer.id}}" class= "btn btn-default">View</a>   -->   
-            
+            <a href="#edit/{{product.id}}" class= "btn btn-primary">Edit Product</a>
           </td>
     </tr>
 </table>
   
-
-
-</div>
-
-<!-- <div ng-show="user.id">admin</div> -->
-
 </div>
