--- a/public/angular_views/admin/index.html
+++ b/public/angular_views/admin/index.html
@@ -1,10 +1,28 @@
 <div ng-if="user.admin">
 	<h2>Product Management<h2>
+  
+  <form class= "form-horizontal" ng-submit= "search(q)">
+    <div class="col-xs-6">
+      <div class="col-sm-12">
+          <div class="col-sm-8">
+           <input type="text" ng-model="q" class= "form-control" placeholder= "Search product name or type..." required />
+         </div>
+         <div class="col-sm-2">
+           
+          </div>
+          <div class="col-sm-2">
+            <button class= "btn btn-success">Search</button>
+          </div>
+      </div>
+    </div>
+   
+  </form>
 
-    <a href="#/new" class= "btn btn-primary">Add New Product</a>
+  <a href="#/new" class= "btn btn-primary">Add New Product</a>
 
-	<h3>Number of Products:  {{products.length}}</h3>
-    <table class= "table table-striped table-hover">
+	  <div ng-if="products.length > 0">
+      <h3>Search Products</h3>
+      <table class= "table table-striped table-hover">
         <th>Product Name</th>
         <th>Product Type</th>
         <th>Cost</th>
@@ -18,7 +36,8 @@
           <td> 
             <a href="#edit/{{product.id}}" class= "btn btn-primary">Edit Product</a>
           </td>
-    </tr>
-</table>
+        </tr>
+      </table>
+    </div>
   
 </div>
