--- a/public/angular_views/landing/landing.html
+++ b/public/angular_views/landing/landing.html
@@ -1,4 +1,43 @@
+
 </br>
 <a href="#/sign_in" ng-if="!user.id" class="btn btn-primary">LogIn As User</a>&nbsp;&nbsp;&nbsp;
 
 <a href="#/sign_in" ng-if="!user.id" class="btn btn-primary">LogIn As Admin</a>
+ <br><br>
+
+<div ng-if="user.id">
+	<form class= "form-horizontal" ng-submit= "search(q)">
+		<div class="col-xs-6">
+	    <div class="col-sm-12">
+	        <div class="col-sm-8">
+	         <input type="text" ng-model="q" class= "form-control" placeholder= "Search product name or type..." required />
+	       </div>
+	       <div class="col-sm-2">
+	         
+	        </div>
+	        <div class="col-sm-2">
+	          <button class= "btn btn-success">Search</button>
+	        </div>
+	    </div>
+	  </div>
+	 
+	</form>
+</div>
+
+<div ng-if="products.length > 0">
+	</br></br></br></br>
+	 <h3>Search Products</h3>
+	 <table class= "table table-striped table-hover" >
+	    <th>Product Name</th>
+	    <th>Cost</th>
+	    <th>Discount</th>
+	    <tr ng-repeat ="product in products track by $index">
+	      <td> {{product.name}}</td>
+	      <td>{{product.cost | currency:"&#8377;"}}</td>
+	      <td>{{product.discount | currency:"&#8377;"}}</td>
+	      <td> 
+	        <!-- <a href="#edit/{{product.id}}" class= "btn btn-primary">Edit Product</a> -->
+	      </td>
+	    </tr>
+	</table>
+</div>
