Default products shown, last searched items

--- a/public/angular_views/admin/index.html
+++ b/public/angular_views/admin/index.html
@@ -1,5 +1,5 @@
 <div ng-if="user.admin">
-	<h2>Product Management<h2>
+	<h2>Product Management</h2>
   
   <form class= "form-horizontal" ng-submit= "search(q)">
     <div class="col-xs-6">
@@ -22,7 +22,7 @@
 
 	  <div ng-if="products.length > 0">
       <h3>Search Products</h3>
-      <table class= "table table-striped table-hover">
+      <table class= "table table-striped table-hover" border="1">
         <th>Product Name</th>
         <th>Product Type</th>
         <th>Cost</th>
