--- a/public/angular_views/landing/landing.html
+++ b/public/angular_views/landing/landing.html
@@ -22,22 +22,44 @@
 	  </div>
 	 
 	</form>
-</div>
 
-<div ng-if="products.length > 0">
-	</br></br></br></br>
-	 <h3>Search Products</h3>
-	 <table class= "table table-striped table-hover" >
-	    <th>Product Name</th>
-	    <th>Cost</th>
-	    <th>Discount</th>
-	    <tr ng-repeat ="product in products track by $index">
-	      <td> {{product.name}}</td>
-	      <td>{{product.cost | currency:"&#8377;"}}</td>
-	      <td>{{product.discount | currency:"&#8377;"}}</td>
-	      <td> 
-	        <!-- <a href="#edit/{{product.id}}" class= "btn btn-primary">Edit Product</a> -->
-	      </td>
-	    </tr>
-	</table>
+
+	<div ng-if="products.length > 0">
+		</br></br></br></br>
+		 <h3>Offers</h3>
+		 <table class= "table table-striped table-hover" border="1">
+		    <th>Product Name</th>
+		    <th>Cost</th>
+		    <th>Discount</th>
+		    <th></th>
+		    <tr ng-repeat ="product in products track by $index">
+		      <td> {{product.name}}</td>
+		      <td>{{product.cost | currency:"&#8377;"}}</td>
+		      <td>{{product.discount | currency:"&#8377;"}}</td>
+		      <td>  
+		      	<!-- <a href="#addCart/{{product.id}}" class= "btn btn-info" ng-if= "added">Remove from Cart</a> -->
+		      	<a href="#addCart/{{product.id}}" class= "btn btn-default">Add To Cart</a>
+		      </td>
+		    </tr>
+		</table>
+	</div>
+
+	</br></br></br>
+	<h3>Last searched Items</h3>
+	<div ng-if="lastSearched.length > 0">
+		
+		 <table class= "table table-striped table-hover" border="1">
+		    <th>Product Name</th>
+		    <th>Cost</th>
+		    <th></th>
+		    <tr ng-repeat ="product in lastSearched track by $index">
+		      <td> {{product.name}}</td>
+		      <td>{{product.cost | currency:"&#8377;"}}</td>
+		      <td>  
+		      	<a href="#addCart/{{product.id}}" class= "btn btn-default">Add To Cart</a>
+		      	
+		      </td>
+		    </tr>
+		</table>
+	</div>
 </div>
